<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kongx.nkuassistant.PageAboutFoxFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitEnd"
        android:src="@drawable/cd_fox" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/fox_name"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/nku" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/fox_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

    </LinearLayout>
</FrameLayout>
