<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kongx.nkuassistant.PageAboutKongxFragment">

    <!--TODO:我多么希望你能换个头像...-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:scaleType="fitStart"
        android:src="@drawable/cd_kong" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/kongx_name"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/nku" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/kongx_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="17sp" />

    </LinearLayout>
</FrameLayout>

