<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    android:background="@drawable/loginbackground"
    tools:context="com.kongx.nkuassistant.EduLoginActivity">

    <!-- Login progress -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Space
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="0.2" />

        <ImageView
            app:srcCompat="@drawable/headers"
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:scaleType="fitStart"
            android:layout_height="100dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <Space
                android:minHeight="100dp"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="0.15"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/greyrect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_marginStart="10dp"
                            app:srcCompat="@drawable/ic_account_circle_white_24dp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:layout_height="match_parent"
                            android:layout_width="50dp" />

                        <EditText
                                android:id="@+id/username"
                            android:background="@null"
                                android:textColor="#E0E0E0"
                                android:textColorHint="#E0E0E0"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="0dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:maxLines="1"
                                android:maxLength="7"
                                android:inputType="textAutoComplete"
                            android:layout_weight="1" />
                    </LinearLayout>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:background="@drawable/greyrect"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_marginStart="10dp"
                            app:srcCompat="@drawable/ic_vpn_key_white_24dp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:layout_height="match_parent"
                            android:layout_width="50dp" />
                        <EditText
                                android:id="@+id/password"
                            android:background="@null"
                                android:textColor="#E0E0E0"
                                android:textColorHint="#E0E0E0"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="0dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:layout_width="match_parent"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1">


                        <LinearLayout
                            android:orientation="horizontal"
                            android:background="@drawable/greyrect"
                            android:layout_height="match_parent"
                            android:layout_width="130dp">

                            <ImageView
                                android:layout_marginStart="10dp"
                                app:srcCompat="@drawable/ic_security_white_24dp"
                                android:layout_weight="1"
                                android:scaleType="centerInside"
                                android:layout_height="match_parent"
                                android:layout_width="50dp" />
                            <EditText
                                    android:id="@+id/ValidateCode"
                                android:background="@null"
                                    android:textColor="#E0E0E0"
                                    android:textColorHint="#E0E0E0"
                                    android:paddingTop="10dp"
                                    android:paddingBottom="10dp"
                                    android:paddingStart="10dp"
                                    android:paddingEnd="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_validate"
                                    android:imeActionId="@+id/login"
                                    android:imeActionLabel="@string/action_sign_in_short"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textVisiblePassword"
                                    android:maxLines="1"
                                    android:layout_width="120dp"
                                android:layout_weight="1" />
                        </LinearLayout>


                        <ImageView
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/validatecode"
                            android:id="@+id/imageView_ValidateCode"
                            android:scaleType="fitCenter"
                            android:layout_width="95dp"
                            android:cropToPadding="false"
                            android:adjustViewBounds="false"
                            android:onClick="getValidateCode"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


            <Switch
                android:text="@string/remember_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingBottom="30dp"
                android:textColor="@color/white"
                android:id="@+id/switch_RemPass" />

            <Button
                android:text="@string/title_activity_edu_login"
                android:background="@drawable/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:id="@+id/button_login"/>



        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
